force-app/main/default/objects/KimbleOne__AllowancePeriodAllocation__c/KimbleOne__AllowancePeriodAllocation__c.object-meta.xml
<CustomObject>
    <label>Allowance Period Allocation</label>
    <nameField>
        <label>Allowance Period Allocation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Allowance Period Allocations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>