force-app/main/default/objects/KimbleOne__AllowancePeriodAllocation__c/fields/KimbleOne__AllocationAmount__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__AllocationAmount__c</fullName>
    <label>Allocation Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>