force-app/main/default/objects/KimbleOne__AllowancePeriodAllocation__c/fields/KimbleOne__AllowancePeriod__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__AllowancePeriod__c</fullName>
    <label>Allowance Period</label>
    <referenceTo>KimbleOne__AllowancePeriod__c</referenceTo>
    <relationshipLabel>Allowance Period Allocations</relationshipLabel>
    <relationshipName>AllowancePeriodAllocations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>