force-app/main/default/objects/KimbleOne__AllowancePeriodAllocation__c/fields/KimbleOne__ExchangeRateConversionFactor__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ExchangeRateConversionFactor__c</fullName>
    <label>Exchange Rate</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>