force-app/main/default/objects/KimbleOne__AllowancePeriodAllocation__c/fields/KimbleOne__ReimbursementCurrencyAllocationAmount__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ReimbursementCurrencyAllocationAmount__c</fullName>
    <label>Allocation Amount Reimbursement Currency</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>