force-app/main/default/objects/KimbleOne__AllowancePeriodAllocation__c/fields/KimbleOne__ResourcedActivity__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ResourcedActivity__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Resourced Activity</label>
    <referenceTo>KimbleOne__ResourcedActivity__c</referenceTo>
    <relationshipLabel>Allowance Period Allocations</relationshipLabel>
    <relationshipName>AllowancePeriodAllocations</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>